--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
 		<title></title>
 		<script type="text/javascript">
 			var url = window.location.href;
-			if (url.indexOf("https") < 0) {
-				url = url.replace("http://wenyumook.github.io", "https://www.mmmook.com");
-				window.location.replace(url);
-			}else {
-				url = url.replace("https://wenyumook.github.io", "https://www.mmmook.com");
+			if (url != "https://www.mmmook.com/") {
+				url = url.replace(url, "https://www.mmmook.com/");
 				window.location.replace(url);
 			}
 		</script>
