--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cmn">
+
 	<head>
-		<meta charset="utf-8" />
-		<title></title>
-		<script type="text/javascript">
-			var url = window.location.href;
-			if (url != "https://www.mmmook.com/") {
-				url = url.replace(url, "https://www.mmmook.com/");
-				window.location.replace(url);
-			}
-		</script>
+		<title>墨刻 - 墨刻模组管理器</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover">
+		<meta name="format-detection" content="telephone=no,email=no,address=no,date=no" />
+		<meta name="keywords" content="Mook,mmmook,Mod,Module,墨刻,墨刻管理器,墨刻编辑器,模组管理器,模组编辑器" />
+		<meta name="description" content="墨刻管理器,墨刻编辑器,模组管理器,模组编辑器" />
+		
+		<link rel="icon" type="image/png" sizes="48x48" href="https://www.mmmook.com/mook/mookpage/images/independent/favicon/favicon.png"/>
 	</head>
+
+	<body>
+		<div id="app"></div>
+	<script type="text/javascript" src="manifest.js?8f3082b8ad0db38751b7"></script><script type="text/javascript" src="vendor.js?4ed7fd275ed951468d71"></script><script type="text/javascript" src="index.js?cb56d056dad394647124"></script></body>
+
 </html>
